--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,94 +1,82 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PDF RAG with FAISS</title>
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+      padding-top: 40px;
+    }
+    .container {
+      max-width: 800px;
+    }
+    .card {
+      margin-bottom: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    .card-header {
+      background-color: #007bff;
+      color: #fff;
+      font-weight: bold;
+    }
+    .btn-custom {
+      background-color: #007bff;
+      border-color: #007bff;
+      color: #fff;
+    }
+    .btn-custom:hover {
+      background-color: #0056b3;
+      border-color: #004085;
+    }
+    .results-card {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>PDF RAG Demo (FAISS)</h1>
-  
-  <h2>Upload PDF</h2>
-  <input type="file" id="pdfFile" accept=".pdf" />
-  <button id="uploadBtn">Upload & Ingest</button>
+  <div class="container">
+    <h1 class="text-center mb-4">
+        RAG: The Impact Venture
+        <sub style="color: #3822ff; font-size: 0.3em;">by Kartik Kanotra</sub>
+      </h1>
 
-  <h2>Query the Vector Store</h2>
-  <textarea id="queryText" rows="3" cols="60" placeholder="Enter your query here..."></textarea><br>
-  <button id="queryBtn">Query</button>
-  
-  <h3>Results</h3>
-  <div id="results"></div>
+    <!-- Upload PDF Card -->
+    <div class="card">
+      <div class="card-header">Upload PDF</div>
+      <div class="card-body">
+        <input type="file" id="pdfFile" accept=".pdf" class="form-control mb-3" />
+        <button id="uploadBtn" type="button" class="btn btn-custom">Upload &amp; Ingest</button>
+      </div>
+    </div>
 
-  <script>
-    const uploadBtn = document.getElementById("uploadBtn");
-    const pdfFile = document.getElementById("pdfFile");
-    const queryBtn = document.getElementById("queryBtn");
-    const queryText = document.getElementById("queryText");
-    const resultsDiv = document.getElementById("results");
-    const BASE_URL = "http://127.0.0.1:5001"; // match your FastAPI port
+    <!-- Query Card -->
+    <div class="card">
+      <div class="card-header">Query the Vector Store</div>
+      <div class="card-body">
+        <textarea id="queryText" rows="3" class="form-control mb-3" placeholder="Enter your query here..."></textarea>
+        <button id="queryBtn" type="button" class="btn btn-custom">Query</button>
+      </div>
+    </div>
 
-    uploadBtn.addEventListener("click", async () => {
-      if (!pdfFile.files.length) {
-        alert("Please select a PDF file first.");
-        return;
-      }
-      const file = pdfFile.files[0];
-      const formData = new FormData();
-      formData.append("file", file);
+    <!-- Results Card -->
+    <div class="card results-card">
+      <div class="card-header">Results</div>
+      <div class="card-body" id="results">
+        <!-- Query results will be displayed here -->
+      </div>
+    </div>
+  </div>
 
-      try {
-        const response = await fetch(`${BASE_URL}/upload-pdf`, {
-          method: "POST",
-          body: formData,
-        });
-        const data = await response.json();
-        alert(data.message);
-      } catch (error) {
-        console.error(error);
-        alert("Failed to upload and ingest PDF.");
-      }
-    });
-
-    queryBtn.addEventListener("click", async () => {
-      const query = queryText.value.trim();
-      if (!query) {
-        alert("Please enter a query.");
-        return;
-      }
-      const formData = new FormData();
-      formData.append("query", query);
-      formData.append("top_k", "5");
-
-      try {
-        const response = await fetch(`${BASE_URL}/query`, {
-          method: "POST",
-          body: formData,
-        });
-        const data = await response.json();
-        displayResults(data.results);
-      } catch (error) {
-        console.error(error);
-        alert("Query failed.");
-      }
-    });
-
-    function displayResults(results) {
-      resultsDiv.innerHTML = "";
-      if (!results || results.length === 0) {
-        resultsDiv.textContent = "No results found.";
-        return;
-      }
-      results.forEach(res => {
-        const div = document.createElement("div");
-        div.innerHTML = `
-          <hr>
-          <p><strong>Rank:</strong> ${res.rank}</p>
-          <p><strong>Source:</strong> ${res.source}</p>
-          <p><strong>Content:</strong> ${res.content}</p>
-        `;
-        resultsDiv.appendChild(div);
-      });
-    }
-  </script>
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Include external script file -->
+  <script src="script.js"></script>
 </body>
 </html>
